--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,10 +17,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.index') }}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.set_ip') }}">Configure IP</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.add_user') }}">Add User</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ url_for('main.network_test') }}">Network Test</a></li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'main.index' %}active{% endif %}" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'main.set_ip' %}active{% endif %}" href="{{ url_for('main.set_ip') }}">Configure IP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'main.add_user' %}active{% endif %}" href="{{ url_for('main.add_user') }}">Add User</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'main.network_test' %}active{% endif %}" href="{{ url_for('main.network_test') }}">Network Test</a>
+                </li>
             </ul>
         </div>
     </div>
